fixed project cards clipping on mobile

--- a/src/partials/_projectcard.scss
+++ b/src/partials/_projectcard.scss
@@ -83,6 +83,8 @@
 
 .project-img-link{
     margin-top: 1.5rem;
+    width: 90vw;
+    height: 100%;
     @include mq('lg'){
         align-self: flex-end;
         flex: 1;
